更新：防止celery内存泄漏，在docker容器中进程被kill

--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -28,7 +28,7 @@ serverurl=unix:///var/run/supervisor.sock ; use a unix:// URL  for a unix socket
 files = /etc/supervisor/conf.d/*.conf
 
 [program:tasks]
-command = /usr/local/bin/celery -A app worker -l info -c 1  ;需要执行的命令
+command = /usr/local/bin/celery -E -A app worker -l info -c 1  ;需要执行的命令
 directory=/data/lady/ ;相当于在该目录下执行程序
 autostart=true    ;supervisor启动的时候是否随着同时启动
 autorestart=true   ;当程序跑出exit的时候，这个program会自动重启
